Refatoração da Configuração